feat: add upload document

--- a/OCR/appsettings.json
+++ b/OCR/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "OCRAuthConnectionString": "Server=(localdb)\\mssqllocaldb;Database=OCRAuthDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "OCRAuthConnectionString": "Server=(localdb)\\mssqllocaldb;Database=OCRAuthDb;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "OCRConnectionString": "Server=(localdb)\\mssqllocaldb;Database=OCRDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Jwt": {
     "Key": "MySuperSecureSecretKeyThatIsAtLeast32CharsLong!",
