--- a/OCR/OCR.csproj
+++ b/OCR/OCR.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\Domain\" />
+    <Folder Include="Documents\" />
   </ItemGroup>
 
 </Project>
