Add RecognizedText and RecognizedDocument entities with migration

--- a/OCR/appsettings.json
+++ b/OCR/appsettings.json
@@ -14,5 +14,9 @@
     "Key": "MySuperSecureSecretKeyThatIsAtLeast32CharsLong!",
     "Issuer": "https://localhost:7241",
     "Audience": "https://localhost:7241"
+  },
+  "AzureComputerVision": {
+    "Endpoint": "yourEndpoint",
+    "Key": "yourKey"
   }
 }
