Refactor name and date search logic

--- a/OCR/appsettings.json
+++ b/OCR/appsettings.json
@@ -18,5 +18,9 @@
   "AzureComputerVision": {
     "Endpoint": "yourEndpoint",
     "Key": "yourKey"
+  },
+  "AzureLanguage": {
+    "Endpoint": "yourEndpoint",
+    "Key": "yourKey"
   }
 }
